# xsens_driver_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
ichthus_xsens_driver/: ichthus_xsens_driver.py
launch/: ichthus_xsens_driver.launch.py  xsens_driver_ros2.launch.py
scripts/: mtdevice.py  mtnode.py
