<?xml version="1.0"?>
<package format="3">
  <name>ichthus_xsens_driver</name>
  <version>0.1.0</version>
  <description>The raw_vehicle_cmd_converter package</description>
  <maintainer email="eunseo.choi.d@gmail.com">eunseo</maintainer>
  <author email="eunseo.choi.d@gmail.com">eunseo</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <!-- <depend>python-serial</depend> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
